# multi-agent-coach

./: .env.claude-mcp-openai.example  .env.claude-mcp-prod.example  .env.deploy.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Jenkinsfile  QA_REPORT_FULL_FLOW_CN.md  README.md  TODOS.md  claude-progress-statusline.md  clerk-public.pem  consolidated_ai.md  dev.sh  docker-compose.yml  soul.md  start.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 094448535b1f_add_candidate_memory_and_coach_plans.py  2e6f7a8b9c10_add_active_interview_run_index.py  3c7aa213fcb6_add_eval_indexes.py  4a5b6c7d8e9f_add_interview_run_state.py  4cc2bf1fbaf8_add_report_json_to_interview_sessions.py  5bd19a28c7ea_merge_heads.py  6d395a53b032_add_user_profile_and_stories.py  7b8c9d0e1f2a_add_interview_session_metrics.py  96e5708f0ff3_add_user_qa_bank.py  9f1a2b3c4d5e_add_interview_sessions.py  b9531ef59bd5_init_schema.py  c7d4a8b2f091_enable_pgvector_extension.py  ca72dbc9da5b_add_resume_fields.py  cbe658f34eb2_add_eval_tables.py  d7e8f9a0b1c2_drop_user_stories.py  d834a422b1a2_add_turn_trace_json_to_interview_.py  e893374d74e3_add_resume_summary_to_users.py
backend/app/: main.py  tasks.py
backend/app/api/: coach.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/eval/: cli.py  datasets.py  dimensions.py  judge.py  regression.py  reporter.py  runner.py  schemas.py  storage.py  system_calls.py
backend/app/models/: __init__.py  core.py  eval.py  qa_bank.py
backend/app/schemas/: coach.py  eval.py  interview.py  qa_bank.py  response.py  user.py
backend/app/services/: candidate_memory.py  coach_opening.py  interview_chat.py  interview_history.py  interview_turn.py  jd_extractor.py  mcp_client.py  qa_bank.py  resume_extractor.py  user_stage.py  user_stats.py
backend/data/benchmarks/: coach_v0.json  interviewer_quality.json  interviewer_v0.json
backend/scripts/: chat_demo.py  clean_test_user.py  eval_report.md  mcp_integration_test.py  quality_eval.py
backend/tests/: conftest.py  test_qa_bank_parser.py
backend/tests/eval/: test_llm_decide.py
backend/tests/integration/: test_alembic_migration.py  test_coach_endpoint.py  test_db_crud.py  test_eval_api.py  test_interview_turn_service.py  test_prepare_api.py  test_prepare_with_mcp.py
backend/tests/unit/: test_auth.py  test_auth_routes.py  test_candidate_memory_model.py  test_candidate_memory_service.py  test_chief_consumes_company_profile.py  test_chief_reasoning.py  test_chief_safety.py  test_coach_consumes_job_intel.py  test_coach_nodes.py  test_coach_opening_service.py  test_coach_routes.py  test_config.py  test_designer_agent.py  test_designer_consumes_job_intel.py  test_eval_benchmarks.py  test_eval_dimensions.py  test_eval_judge.py  test_eval_models.py  test_eval_regression.py  test_eval_runner_aggregate.py  test_eval_runner_concurrency.py  (+41 more)
(+396 files in other folders)
