[project]
name = "multi-agent-coach-backend"
version = "0.1.0"
description = "Multi Agent Coach backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "pyjwt[crypto]>=2.9",
    "openai>=1.55",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "sse-starlette>=2.1",
    "firecrawl-py>=1.6",
    "tenacity>=9.0",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]
