[project]
name = "multi-agent-coach-backend"
version = "0.1.0"
description = "Multi Agent Coach backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "pyjwt[crypto]>=2.9",
    "openai>=1.55",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "sse-starlette>=2.1",
    "firecrawl-py>=1.6",
    "tenacity>=9.0",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-binary>=3.2",
    "pypdf2>=3.0.1",
    "mammoth>=1.8.0",
    "beautifulsoup4>=4.12.3",
    "rich>=13.9.4",
    "langchain-mcp-adapters>=0.1.0",
]

[project.scripts]
eval-cli = "app.eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "celery-types>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
# alembic 迁移为工具自动生成代码，不纳入主代码风格检查
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
# UP046: pydantic 模型保留旧式 Generic[T] 写法最稳妥，不强制 PEP695 泛型语法
ignore = ["E501", "UP046"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的依赖注入标记本就设计成默认值，不触发可变默认参数陷阱，豁免 B008 误报
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]
